--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
     #0071ff33 160deg,
     transparent 360deg
   );
+  --navbg: black;
+  --footerbg: black;
   --secondary-glow: radial-gradient(
     rgba(255, 255, 255, 1),
     rgba(255, 255, 255, 0)
@@ -104,4 +106,8 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+nextjs-portal {
+  display: none;
 }
